SUBDIRS = doodle

tbodir = $(datadir)/tbo
tbo_DATA = *.png

tbouidir = $(datadir)/tbo/ui
tboui_DATA = ui/*.xml

tboicondir = $(datadir)/tbo/icons
tboicon_DATA = icons/*.svg

appdir = $(datadir)/applications/
app_DATA = tbo.desktop

appicondir = $(datadir)/pixmaps/
appicon_DATA = tbo.svg

EXTRA_DIST = \
	*.png \
	ui/*.xml \
	icons/*.svg \
	tbo.desktop \
	tbo.svg
