doodle1bodydir = $(datadir)/tbo/doodle/doodle1/body
doodle1body_DATA = doodle1/body/*.svg
doodle1mouthdir = $(datadir)/tbo/doodle/doodle1/mouth
doodle1mouth_DATA = doodle1/mouth/*.svg
doodle1eyesdir = $(datadir)/tbo/doodle/doodle1/eyes
doodle1eyes_DATA = doodle1/eyes/*.svg

#######
# FOO #
#######

foobodydir = $(datadir)/tbo/doodle/foo/body
foobody_DATA = foo/body/*.svg
foomouthdir = $(datadir)/tbo/doodle/foo/mouth
foomouth_DATA = foo/mouth/*.svg
fooeyesdir = $(datadir)/tbo/doodle/foo/eyes
fooeyes_DATA = foo/eyes/*.svg

###########
# BUBBLES #
###########

bubbleellipsedir = $(datadir)/tbo/doodle/bubble/ellipse
bubbleellipse_DATA = bubble/ellipse/*.svg
bubblesquaredir = $(datadir)/tbo/doodle/bubble/square
bubblesquare_DATA = bubble/square/*.svg

EXTRA_DIST = \
	doodle1/body/*.svg
	doodle1/mouth/*.svg
	doodle1/eyes/*.svg
	foo/body/*.svg
	foo/mouth/*.svg
	foo/eyes/*.svg
	bubble/ellipse/*.svg
	bubble/square/*.svg
