doodle1bodydir = $(datadir)/tbo/doodle/doodle1/body
doodle1body_DATA = doodle1/body/*.svg
doodle1mouthdir = $(datadir)/tbo/doodle/doodle1/mouth
doodle1mouth_DATA = doodle1/mouth/*.svg
doodle1eyesdir = $(datadir)/tbo/doodle/doodle1/eyes
doodle1eyes_DATA = doodle1/eyes/*.svg

#######
# TBO #
#######

tbologodir = $(datadir)/tbo/doodle/tbo/logo
tbologo_DATA = tbo/logo/*.svg

###########
# ARCADIA #
###########

arcadiadir = $(datadir)/tbo/doodle/arcadia/one
arcadia_DATA = arcadia/one/*.svg

#######
# DGM #
#######

dgmbodydir = $(datadir)/tbo/doodle/dgm/body
dgmbody_DATA = dgm/body/*.svg

######
# LH #
######

lhfoodir = $(datadir)/tbo/doodle/linuxhispano/foo
lhfoo_DATA = linuxhispano/foo/*.svg
lhmouthdir = $(datadir)/tbo/doodle/linuxhispano/mouth
lhmouth_DATA = linuxhispano/mouth/*.svg
lheyesdir = $(datadir)/tbo/doodle/linuxhispano/eyes
lheyes_DATA = linuxhispano/eyes/*.svg
lhbardir = $(datadir)/tbo/doodle/linuxhispano/bar
lhbar_DATA = linuxhispano/bar/*.svg
lhgirldir = $(datadir)/tbo/doodle/linuxhispano/girl
lhgirl_DATA = linuxhispano/girl/*.svg
lhemiliodir = $(datadir)/tbo/doodle/linuxhispano/emilio
lhemilio_DATA = linuxhispano/emilio/*.svg

##############
# ACCESORIES #
##############

accpcsdir = $(datadir)/tbo/doodle/accesories/pcs
accpcs_DATA = accesories/pcs/*.svg

# TANGO ICONS
tangodevdir = $(datadir)/tbo/doodle/accesories/devices
tangodev_DATA = accesories/devices/*.svg

tangoemdir = $(datadir)/tbo/doodle/accesories/emotes
tangoem_DATA = accesories/emotes/*.svg

tangoacdir = $(datadir)/tbo/doodle/accesories/actions
tangoac_DATA = accesories/actions/*.svg

###########
# BUBBLES #
###########

bubbleellipsedir = $(datadir)/tbo/doodle/bubble/ellipse
bubbleellipse_DATA = bubble/ellipse/*.svg
bubblesquaredir = $(datadir)/tbo/doodle/bubble/square
bubblesquare_DATA = bubble/square/*.svg
bubblesmiscdir = $(datadir)/tbo/doodle/bubble/misc
bubblesmisc_DATA = bubble/misc/*.svg

##############
# GUADALINEX #
##############

guadalinexdir = $(datadir)/tbo/doodle/guadalinex/andatuz
guadalinex_DATA = guadalinex/andatuz/*.svg

#############
# SOUTHPARK #
#############

sppoliticsdir = $(datadir)/tbo/doodle/southpark/politics
sppolitics_DATA = southpark/politics/*.svg
spmouthdir = $(datadir)/tbo/doodle/southpark/mouth
spmouth_DATA = southpark/mouth/*.svg
speyedir = $(datadir)/tbo/doodle/southpark/eye
speye_DATA = southpark/eye/*.svg

EXTRA_DIST = \
	doodle1/body/*.svg \
	doodle1/mouth/*.svg \
	doodle1/eyes/*.svg \
	linuxhispano/foo/*.svg \
	linuxhispano/bar/*.svg \
	linuxhispano/girl/*.svg \
	linuxhispano/emilio/*.svg \
	linuxhispano/mouth/*.svg \
	linuxhispano/eyes/*.svg \
	accesories/pcs/*.svg \
	accesories/devices/*.svg \
	accesories/emotes/*.svg \
	accesories/actions/*.svg \
	bubble/ellipse/*.svg \
	bubble/square/*.svg \
	bubble/misc/*.svg \
	guadalinex/andatuz/*.svg \
	dgm/body/*.svg \
	arcadia/one/*.svg \
	southpark/politics/*.svg \
	southpark/mouth/*.svg \
	southpark/eye/*.svg \
	tbo/logo/*.svg
