######
# LH #
######

lhconfdir = $(datadir)/tbo/libs/linuxhispano
lhconf_DATA = linuxhispano/tbolib.conf linuxhispano/thumb.png
lhfoodir = $(datadir)/tbo/libs/linuxhispano/clips/foo
lhfoo_DATA = linuxhispano/clips/foo/*.svg
lhmouthdir = $(datadir)/tbo/libs/linuxhispano/clips/mouth
lhmouth_DATA = linuxhispano/clips/mouth/*.svg
lheyesdir = $(datadir)/tbo/libs/linuxhispano/clips/eyes
lheyes_DATA = linuxhispano/clips/eyes/*.svg
lhbardir = $(datadir)/tbo/libs/linuxhispano/clips/bar
lhbar_DATA = linuxhispano/clips/bar/*.svg
lhgirldir = $(datadir)/tbo/libs/linuxhispano/clips/girl
lhgirl_DATA = linuxhispano/clips/girl/*.svg
lhemiliodir = $(datadir)/tbo/libs/linuxhispano/clips/emilio
lhemilio_DATA = linuxhispano/clips/emilio/*.svg

EXTRA_DIST = \
	linuxhispano/foo/*.svg \
	linuxhispano/bar/*.svg \
	linuxhispano/girl/*.svg \
	linuxhispano/emilio/*.svg \
	linuxhispano/mouth/*.svg \
	linuxhispano/eyes/*.svg
